--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,31 @@
-body {
+@import url('https://fonts.googleapis.com/css2?family=Barlow&family=Barlow+Condensed:wght@200;300;400&family=Bellefair&display=swap');body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+h1 {
+  color: #fff;
+  font-family: 'Bellefair', serif;
+  text-transform: uppercase;
+  font-size: 150px;
+  font-weight: 300;
+  margin-top: 25px;
+  margin-bottom: 25px;
+}
+
+h5 {
+  color: #d0d6f9;
+  font-family: "Barlow Condensed", sans-serif;
+  font-weight: 300;
+  text-transform: uppercase;
+  letter-spacing: 4.72px;
+  font-size: 28px;
+  margin: 0;
+}
+
+p {
+  color: #d0d6f9;
+  font-family: 'Barlow', sans-serif;
+  font-size: 18px;
+  margin: 0;
+  line-height: 32px;
 }
