--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,11 @@
-@import url('https://fonts.googleapis.com/css2?family=Barlow&family=Barlow+Condensed:wght@200;300;400&family=Bellefair&display=swap');body {
+@import url("https://fonts.googleapis.com/css2?family=Barlow&family=Barlow+Condensed:wght@200;300;400&family=Bellefair&display=swap");
+body {
   margin: 0;
 }
 
 h1 {
   color: #fff;
-  font-family: 'Bellefair', serif;
+  font-family: "Bellefair", serif;
   text-transform: uppercase;
   font-size: 150px;
   font-weight: 300;
@@ -24,8 +25,27 @@ h5 {
 
 p {
   color: #d0d6f9;
-  font-family: 'Barlow', sans-serif;
+  font-family: "Barlow", sans-serif;
   font-size: 18px;
   margin: 0;
+  padding: 0;
   line-height: 32px;
+}
+
+@media (max-width: 375px) {
+  h1 {
+    font-size: 80px;
+    font-weight: 300;
+  }
+
+  h5 {
+    font-size: 16px;
+    font-weight: 300;
+    letter-spacing: 2.7px;
+  }
+
+  p {
+    font-size: 15px;
+    line-height: 25px;
+  }
 }
